ui: better QR switcher

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "اختر اشتقاق المحفظة",
   "choose_from_available_options": "اختر من بين الخيارات المتاحة:",
   "choose_one": "اختر واحدة",
+  "choose_qr_code_format": "اختر تنسيق رمز الاستجابة السريعة",
+  "choose_qr_code_format_note": "اختر التنسيق المناسب لمحفظة الأجهزة الخاصة بك:",
   "choose_relay": "ﻡﺍﺪﺨﺘﺳﻼ﻿ﻟ ﻊﺑﺎﺘﺘﻟﺍ ﺭﺎﻴﺘﺧﺍ ءﺎﺟﺮﻟﺍ",
   "choose_wallet_currency": "الرجاء اختيار عملة المحفظة:",
   "choose_wallet_group": "اختر مجموعة المحفظة",
@@ -642,6 +644,9 @@
   "public_key": "مفتاح عمومي",
   "purchase_gift_card": "شراء بطاقة هدايا",
   "purple_dark_theme": "موضوع الظلام الأرجواني",
+  "qr_code_format": "تنسيق رمز الاستجابة السريعة",
+  "qr_code_format_body": "BCUR (موارد موحدة blockchain Commons) هو معيار الصناعة ، والأكثر توافقًا على نطاق واسع مع محافظ أجهزة Bitcoin ، ويجب اختياره من قبل معظم المستخدمين. BBQR (Better Bitcoin QR) هو تنسيق فريد تستخدمه فقط من قبل محافظ أجهزة ColdCard ، بدءًا من طرازها Q.",
+  "qr_code_format_note": "يتم استخدام تنسيقات رمز الاستجابة السريعة المختلفة بواسطة محافظ أجهزة مختلفة في مساحة البيتكوين",
   "qr_fullscreen": "انقر لفتح ال QR بملء الشاشة",
   "qr_instruction": "استخدم هذا العنوان لتلقي أي رمز أو تحصيله",
   "qr_payment_amount": "يحتوي هذا ال QR على مبلغ الدفع. هل تريد تغير المبلغ فوق القيمة الحالية؟",
