--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Изберете производно на портфейла",
   "choose_from_available_options": "Изберете от следните опции:",
   "choose_one": "Изберете едно",
+  "choose_qr_code_format": "Изберете формат на QR код",
+  "choose_qr_code_format_note": "Изберете правилния формат за вашия хардуерен портфейл:",
   "choose_relay": "Моля, изберете реле, което да използвате",
   "choose_wallet_currency": "Изберете валута за портфейла:",
   "choose_wallet_group": "Изберете Group Wallet",
@@ -642,6 +644,9 @@
   "public_key": "Публичен ключ",
   "purchase_gift_card": "Купуване на Gift Card",
   "purple_dark_theme": "Лилава тъмна тема",
+  "qr_code_format": "QR формат на кода",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) е индустриалният стандарт и най -широко съвместим с хардуерните портфейли на биткойн и трябва да бъде избран от повечето потребители. BBQR (Better Bitcoin QR) е уникален формат, използван само от хардуерни портфейли ColdCard, започвайки от техния модел Q.",
+  "qr_code_format_note": "Различните формати на QR код се използват от различни хардуерни портфейли в пространството на биткойн",
   "qr_fullscreen": "Натиснете, за да отворите QR кода на цял екран",
   "qr_instruction": "Използвайте този адрес, за да получавате някакви маркери или колекционерски",
   "qr_payment_amount": "Този QR код съдържа сума за плащане. Искате ли да промените стойността?",
