--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Vyberte derivaci peněženky",
   "choose_from_available_options": "Zvolte si z dostupných možností:",
   "choose_one": "Zvolte si",
+  "choose_qr_code_format": "Vyberte formát QR kódu",
+  "choose_qr_code_format_note": "Vyberte správný formát pro hardwarovou peněženku:",
   "choose_relay": "Vyberte relé, které chcete použít",
   "choose_wallet_currency": "Prosím zvolte si měnu pro peněženku:",
   "choose_wallet_group": "Vyberte skupinu peněženky",
@@ -642,6 +644,9 @@
   "public_key": "Veřejný klíč",
   "purchase_gift_card": "Objednat dárkovou kartu",
   "purple_dark_theme": "Fialové temné téma",
+  "qr_code_format": "Formát kódu QR",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) je průmyslový standard a nejvíce kompatibilní s hardwarovými peněženkami bitcoinu a většina uživatelů by měla být vybrána. BBQR (Better Bitcoin QR) je jedinečný formát používaný pouze hardwarovými peněženkami ColdCard, počínaje jejich modelem Q.",
+  "qr_code_format_note": "Různé formáty QR kódu používají různé hardwarové peněženky v bitcoinovém prostoru",
   "qr_fullscreen": "Poklepáním otevřete QR kód na celé obrazovce",
   "qr_instruction": "Tuto adresu použijte k získání jakéhokoli tokenu nebo sběratelského sběratele",
   "qr_payment_amount": "Tento QR kód obsahuje i částku. Chcete přepsat současnou hodnotu?",
