--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Elige la derivación de la billetera",
   "choose_from_available_options": "Elige entre las opciones disponibles:",
   "choose_one": "Elige uno",
+  "choose_qr_code_format": "Elija formato de código QR",
+  "choose_qr_code_format_note": "Elija el formato correcto para su billetera de hardware:",
   "choose_relay": "Por favor elige un relay para usar",
   "choose_wallet_currency": "Por favor, elige la moneda de la billetera:",
   "choose_wallet_group": "Elige el grupo de billeteras",
@@ -643,6 +645,9 @@
   "public_key": "Clave pública",
   "purchase_gift_card": "Comprar tarjeta de regalo",
   "purple_dark_theme": "Tema morado oscuro",
+  "qr_code_format": "Formato de código QR",
+  "qr_code_format_body": "BCUR (Recursos uniformes de Blockchain Commons) es el estándar de la industria, y la mayoría de los usuarios debe seleccionar las más compatibles con las billeteras de hardware de Bitcoin, y debe ser seleccionada por la mayoría de los usuarios. BBQR (Better Bitcoin QR) es un formato único utilizado solo por las billeteras de hardware ColdCard, comenzando con su modelo Q.",
+  "qr_code_format_note": "Los diferentes formatos de código QR son utilizados por diferentes billeteras de hardware en el espacio de Bitcoin",
   "qr_fullscreen": "Toque para abrir el código QR en pantalla completa",
   "qr_instruction": "Use esta dirección para recibir cualquier token o coleccionable en",
   "qr_payment_amount": "Este código QR contiene un monto de pago. ¿Quieres sobreescribirlo?",
