--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Choisir la dérivation du portefeuille",
   "choose_from_available_options": "Choisissez parmi les options disponibles:",
   "choose_one": "Choisissez-en un",
+  "choose_qr_code_format": "Choisissez le format de code QR",
+  "choose_qr_code_format_note": "Choisissez le bon format pour votre portefeuille matériel:",
   "choose_relay": "Veuillez choisir un relais à utiliser",
   "choose_wallet_currency": "Merci de choisir la devise du portefeuille (wallet):",
   "choose_wallet_group": "Choisissez un groupe de portefeuille",
@@ -642,6 +644,9 @@
   "public_key": "Clef publique",
   "purchase_gift_card": "Acheter une carte-cadeau",
   "purple_dark_theme": "THÈME PURPLE DARK",
+  "qr_code_format": "Format de code QR",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) est la norme de l'industrie et le plus compatible avec les portefeuilles matériels Bitcoin, et doit être sélectionné par la plupart des utilisateurs. BBQR (Better Bitcoin QR) est un format unique utilisé uniquement par les portefeuilles matériels ColdCard, en commençant par leur modèle Q.",
+  "qr_code_format_note": "Différents formats de code QR sont utilisés par différents portefeuilles matériels dans l'espace Bitcoin",
   "qr_fullscreen": "Appuyez pour ouvrir le QR code en mode plein écran",
   "qr_instruction": "Utilisez cette adresse pour recevoir un jeton ou une collection sur",
   "qr_payment_amount": "Ce QR code contient un montant de paiement. Voulez-vous remplacer la valeur actuelle ?",
