--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Zaɓi walatawa",
   "choose_from_available_options": "Zaɓi daga zaɓuɓɓukan da ake da su:",
   "choose_one": "Zaɓi ɗaya",
+  "choose_qr_code_format": "Zabi Tsarin QR",
+  "choose_qr_code_format_note": "Zabi hanyar da ya dace don kayan aikin kayan aiki:",
   "choose_relay": "Da fatan za a zaɓi gudun ba da sanda don amfani",
   "choose_wallet_currency": "Da fatan za a zaɓi kuɗin walat:",
   "choose_wallet_group": "Zabi kungiyar walat",
@@ -644,6 +646,9 @@
   "public_key": "Maɓallin jama'a",
   "purchase_gift_card": "Katin Kyautar Sayi",
   "purple_dark_theme": "M duhu jigo",
+  "qr_code_format": "Tsarin QR",
+  "qr_code_format_body": "BCUR (BICELCAIN Communs unders) shine ingantaccen masana'antu, kuma mafi yawan jituwa tare da kayan masarufi na Bitcoin, kuma ya kamata a zaɓi yawancin masu amfani. BBQR (mafi kyau bitcoin QR) Tsarin na musamman ne da sanyi da aka yi amfani da shi kawai da kayan aikin kayan kwalliya, farawa da samfurinsu Q.",
+  "qr_code_format_note": "Ana amfani da ƙa'idodin QR daban-daban ta hanyar kayan aikin kayan kwalliya daban-daban a cikin sararin bitcoin",
   "qr_fullscreen": "Matsa don buɗe lambar QR na cikakken allo",
   "qr_instruction": "Yi amfani da wannan adireshin don karɓar kowane alama ko tattarawa",
   "qr_payment_amount": "Wannan QR code yana da adadin kuɗi. Kuna so ku overwrite wannan adadi?",
