--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "वॉलेट व्युत्पत्ति चुनें",
   "choose_from_available_options": "उपलब्ध विकल्पों में से चुनें:",
   "choose_one": "एक का चयन",
+  "choose_qr_code_format": "QR कोड प्रारूप चुनें",
+  "choose_qr_code_format_note": "अपने हार्डवेयर वॉलेट के लिए सही प्रारूप चुनें:",
   "choose_relay": "कृपया उपयोग करने के लिए एक रिले चुनें",
   "choose_wallet_currency": "कृपया बटुआ मुद्रा चुनें:",
   "choose_wallet_group": "वॉलेट ग्रुप चुनें",
@@ -643,6 +645,9 @@
   "public_key": "सार्वजनिक कुंजी",
   "purchase_gift_card": "गिफ्ट कार्ड खरीदें",
   "purple_dark_theme": "पर्पल डार्क थीम",
+  "qr_code_format": "क्यूआर कोड प्रारूप",
+  "qr_code_format_body": "BCUR (ब्लॉकचेन कॉमन्स वर्दी संसाधन) उद्योग मानक है, और बिटकॉइन हार्डवेयर वॉलेट के साथ सबसे व्यापक रूप से संगत है, और अधिकांश उपयोगकर्ताओं द्वारा चुना जाना चाहिए। BBQR (बेहतर बिटकॉइन QR) एक अनूठा प्रारूप है जिसका उपयोग केवल कोल्डकार्ड हार्डवेयर वॉलेट द्वारा किया जाता है, जो उनके मॉडल Q के साथ शुरू होता है।",
+  "qr_code_format_note": "अलग -अलग क्यूआर कोड प्रारूपों का उपयोग बिटकॉइन स्पेस में अलग -अलग हार्डवेयर वॉलेट द्वारा किया जाता है",
   "qr_fullscreen": "फ़ुल स्क्रीन क्यूआर कोड खोलने के लिए टैप करें",
   "qr_instruction": "किसी भी टोकन या संग्रहणीय पर प्राप्त करने के लिए इस पते का उपयोग करें",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
