--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Ընտրեք դրամապանակի ածանցում",
   "choose_from_available_options": "Ընտրեք առկա տարբերակներից",
   "choose_one": "Ընտրեք մեկը",
+  "choose_qr_code_format": "Ընտրեք QR կոդի ձեւաչափը",
+  "choose_qr_code_format_note": "Ընտրեք ճիշտ ձեւաչափը ձեր ապարատային դրամապանակի համար.",
   "choose_relay": "Խնդրում ենք ընտրեք փոխանցման կետ",
   "choose_wallet_currency": "Խնդրում ենք ընտրեք դրամապանակի արժույթը",
   "choose_wallet_group": "Ընտրեք դրամապանակների խումբ",
@@ -641,6 +643,9 @@
   "public_key": "Հանրային բանալի",
   "purchase_gift_card": "Նվեր քարտ գնել",
   "purple_dark_theme": "Մանուշակագույն մութ տեսք",
+  "qr_code_format": "QR կոդ ձեւաչափ",
+  "qr_code_format_body": "BCUR (Blockchain Commons համազգեստի ռեսուրսներ) արդյունաբերության չափանիշն է, եւ առավել լայնորեն համատեղելի է Bitcoin ապարատային դրամապանակների հետ, եւ պետք է ընտրվեն օգտագործողների մեծամասնության կողմից: BBQR (ավելի լավ Bitcoin QR) եզակի ձեւաչափ է, որն օգտագործվում է միայն ColdCard ապարատային դրամապանակներով, սկսած իրենց մոդելից Q.",
+  "qr_code_format_note": "QR կոդերի տարբեր ձեւաչափեր օգտագործվում են տարբեր ապարատային դրամապանակների կողմից Bitcoin տարածության մեջ",
   "qr_fullscreen": "Սեղմեք այստեղ բացելու ամբողջ էկրանը QR կոդ",
   "qr_instruction": "Օգտագործեք այս հասցեն `ցանկացած նշան կամ հավաքածու ստանալու համար",
   "qr_payment_amount": "Այս QR կոդը պարունակում է վճարման գումար։ Ուզում եք թարմացնել ընթացիկ արժեքը?",
