--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Pilih dompet dompet",
   "choose_from_available_options": "Pilih dari pilihan yang tersedia:",
   "choose_one": "Pilih satu",
+  "choose_qr_code_format": "Pilih Format Kode QR",
+  "choose_qr_code_format_note": "Pilih format yang tepat untuk dompet perangkat keras Anda:",
   "choose_relay": "Silakan pilih relai yang akan digunakan",
   "choose_wallet_currency": "Silahkan pilih mata uang dompet:",
   "choose_wallet_group": "Pilih Grup Dompet",
@@ -644,6 +646,9 @@
   "public_key": "Kunci publik",
   "purchase_gift_card": "Beli Kartu Hadiah",
   "purple_dark_theme": "Tema gelap ungu",
+  "qr_code_format": "Format Kode QR",
+  "qr_code_format_body": "BCUR (Blockchain Commons Seragam Sumber Daya) adalah standar industri, dan paling kompatibel dengan dompet perangkat keras Bitcoin, dan harus dipilih oleh sebagian besar pengguna. BBQR (Better Bitcoin QR) adalah format unik yang hanya digunakan oleh dompet perangkat keras Coldcard, dimulai dengan model Q.",
+  "qr_code_format_note": "Format kode QR yang berbeda digunakan oleh dompet perangkat keras yang berbeda di ruang bitcoin",
   "qr_fullscreen": "Tap untuk membuka layar QR code penuh",
   "qr_instruction": "Gunakan alamat ini untuk menerima token atau koleksi",
   "qr_payment_amount": "QR code ini berisi jumlah pembayaran. Apakah Anda ingin menimpa nilai saat ini?",
