--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Scegli la derivazione del portafoglio",
   "choose_from_available_options": "Scegli tra le opzioni disponibili:",
   "choose_one": "Scegline uno",
+  "choose_qr_code_format": "Scegli il formato del codice QR",
+  "choose_qr_code_format_note": "Scegli il formato giusto per il tuo portafoglio hardware:",
   "choose_relay": "Scegli un relay da utilizzare",
   "choose_wallet_currency": "Scegli la valuta del portafoglio:",
   "choose_wallet_group": "Scegli il gruppo del portafoglio",
@@ -643,6 +645,9 @@
   "public_key": "Chiave pubblica",
   "purchase_gift_card": "Acquista carta regalo",
   "purple_dark_theme": "Tema scuro viola",
+  "qr_code_format": "Formato del codice QR",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) è lo standard del settore e molto compatibile con i portafogli hardware Bitcoin e dovrebbe essere selezionato dalla maggior parte degli utenti. BBQR (Better Bitcoin QR) è un formato unico utilizzato solo dai portafogli hardware Coldcard, a partire dal loro modello Q.",
+  "qr_code_format_note": "Diversi formati di codice QR sono utilizzati da diversi portafogli hardware nello spazio Bitcoin",
   "qr_fullscreen": "Tocca per aprire il codice QR a schermo intero",
   "qr_instruction": "Usa questo indirizzo per ricevere qualsiasi token o collezione su",
   "qr_payment_amount": "Questo codice QR contiene l'importo del pagamento. Vuoi sovrascrivere il valore attuale?",
