--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "지갑 파생 경로 선택",
   "choose_from_available_options": "사용 가능한 옵션 중에서 선택하세요:",
   "choose_one": "하나 선택",
+  "choose_qr_code_format": "QR 코드 형식을 선택하십시오",
+  "choose_qr_code_format_note": "하드웨어 지갑에 적합한 형식을 선택하십시오.",
   "choose_relay": "사용할 릴레이를 선택하세요",
   "choose_wallet_currency": "지갑 통화를 선택하세요:",
   "choose_wallet_group": "지갑 그룹 선택",
@@ -643,6 +645,9 @@
   "public_key": "공개 키",
   "purchase_gift_card": "기프트 카드 구매",
   "purple_dark_theme": "보라색 다크 테마",
+  "qr_code_format": "QR 코드 형식",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources)은 업계 표준이며 비트 코인 하드웨어 지갑과 가장 호환되며 대부분의 사용자가 선택해야합니다. BBQR (Better Bitcoin QR)은 모델 Q부터 시작하여 콜드 카드 하드웨어 지갑에서만 사용하는 고유 한 형식입니다.",
+  "qr_code_format_note": "비트 코인 공간의 다른 하드웨어 지갑에서 다른 QR 코드 형식을 사용합니다.",
   "qr_fullscreen": "전체 화면 QR 코드를 열려면 탭하세요",
   "qr_instruction": "이 주소를 사용하여 토큰 또는 수집품을 받으십시오.",
   "qr_payment_amount": "이 QR 코드에는 결제 금액이 포함되어 있습니다. 현재 값을 덮어쓰시겠습니까?",
