--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Kies portemonnee -afleiding",
   "choose_from_available_options": "Kies uit de beschikbare opties:",
   "choose_one": "Kies er een",
+  "choose_qr_code_format": "Kies QR -code -indeling",
+  "choose_qr_code_format_note": "Kies het juiste formaat voor uw hardware -portemonnee:",
   "choose_relay": "Kies een relais dat u wilt gebruiken",
   "choose_wallet_currency": "Kies een portemonnee-valuta:",
   "choose_wallet_group": "Kies portemonnee groep",
@@ -642,6 +644,9 @@
   "public_key": "Publieke sleutel",
   "purchase_gift_card": "Cadeaubon kopen",
   "purple_dark_theme": "Paars donker thema",
+  "qr_code_format": "QR -codeformaat",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) is de industriestandaard en het meest compatibel met Bitcoin -hardware -portefeuilles en moet door de meeste gebruikers worden geselecteerd. BBQR (Better Bitcoin QR) is een uniek formaat dat alleen wordt gebruikt door ColdCard Hardware -portefeuilles, beginnend met hun model Q.",
+  "qr_code_format_note": "Verschillende QR -code -formaten worden gebruikt door verschillende hardware -portefeuilles in de Bitcoin -ruimte",
   "qr_fullscreen": "Tik om de QR-code op volledig scherm te openen",
   "qr_instruction": "Gebruik dit adres om een token of verzamelobject te ontvangen",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
