--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Wybierz wyprowadzenie frazy",
   "choose_from_available_options": "Wybierz z dostępnych opcji:",
   "choose_one": "Wybierz jeden",
+  "choose_qr_code_format": "Wybierz format kodu QR",
+  "choose_qr_code_format_note": "Wybierz odpowiedni format dla swojego portfela sprzętowego:",
   "choose_relay": "Wybierz przekaźnik, który chcesz użyć",
   "choose_wallet_currency": "Wybierz walutę portfela:",
   "choose_wallet_group": "Wybierz grupę portfela",
@@ -642,6 +644,9 @@
   "public_key": "Klucz publiczny",
   "purchase_gift_card": "Kup kartę podarunkową",
   "purple_dark_theme": "Ciemy Fiolet",
+  "qr_code_format": "Format kodu QR",
+  "qr_code_format_body": "BCUR (Blockchain Commons Mundur Resources) jest standardem branżowym i najczęściej kompatybilny z portfelami sprzętowymi Bitcoin i powinien być wybierany przez większość użytkowników. BBQR (Better Bitcoin QR) to unikalny format używany tylko przez portfele sprzętowe Coldcard, zaczynając od ich modelu Q.",
+  "qr_code_format_note": "Różne formaty kodów QR są używane przez różne portfele sprzętowe w przestrzeni Bitcoin",
   "qr_fullscreen": "Dotknij, aby otworzyć pełnoekranowy kod QR",
   "qr_instruction": "Użyj tego adresu, aby otrzymać dowolny token lub kolekcjonerski",
   "qr_payment_amount": "Ten kod QR zawiera kwotę do zapłaty. Czy chcesz nadpisać obecną wartość?",
