--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Escolha a derivação da carteira",
   "choose_from_available_options": "Escolha entre as opções disponíveis:",
   "choose_one": "Escolha um",
+  "choose_qr_code_format": "Escolha formato de código QR",
+  "choose_qr_code_format_note": "Escolha o formato certo para sua carteira de hardware:",
   "choose_relay": "Escolha um relé para usar",
   "choose_wallet_currency": "Escolha a moeda da carteira:",
   "choose_wallet_group": "Escolha o Grupo de Wallet",
@@ -644,6 +646,9 @@
   "public_key": "Chave pública",
   "purchase_gift_card": "Comprar vale-presente",
   "purple_dark_theme": "Tema escuro roxo",
+  "qr_code_format": "Formato de código QR",
+  "qr_code_format_body": "O BCUR (Recursos Uniformes do Blockchain Commons) é o padrão da indústria e é mais amplamente compatível com carteiras de hardware Bitcoin e deve ser selecionado pela maioria dos usuários. O BBQR (Better Bitcoin QR) é um formato exclusivo usado apenas por carteiras de hardware de cartão frio, começando com seu modelo Q.",
+  "qr_code_format_note": "Diferentes formatos de código QR são usados ​​por diferentes carteiras de hardware no espaço Bitcoin",
   "qr_fullscreen": "Toque para abrir o código QR em tela cheia",
   "qr_instruction": "Use este endereço para receber qualquer token ou colecionável em",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
