--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "เลือก Wallet Derivation",
   "choose_from_available_options": "เลือกจากตัวเลือกที่มีอยู่:",
   "choose_one": "เลือกหนึ่งรายการ",
+  "choose_qr_code_format": "เลือกรูปแบบรหัส QR",
+  "choose_qr_code_format_note": "เลือกรูปแบบที่เหมาะสมสำหรับกระเป๋าเงินฮาร์ดแวร์ของคุณ:",
   "choose_relay": "กรุณาเลือกรีเลย์ที่จะใช้",
   "choose_wallet_currency": "โปรดเลือกสกุลเงินของกระเป๋า:",
   "choose_wallet_group": "เลือกกลุ่มกระเป๋าเงิน",
@@ -642,6 +644,9 @@
   "public_key": "คีย์สาธารณะ",
   "purchase_gift_card": "ซื้อบัตรของขวัญ",
   "purple_dark_theme": "ธีมสีม่วงเข้ม",
+  "qr_code_format": "รูปแบบรหัส QR",
+  "qr_code_format_body": "BCUR (blockchain Commons Resources Inhornal) เป็นมาตรฐานอุตสาหกรรมและเข้ากันได้อย่างกว้างขวางที่สุดกับกระเป๋าเงินฮาร์ดแวร์ Bitcoin และควรเลือกโดยผู้ใช้ส่วนใหญ่ BBQR (Better Bitcoin QR) เป็นรูปแบบที่ไม่ซ้ำกันที่ใช้โดยกระเป๋าเงินฮาร์ดแวร์ ColdCard เท่านั้นเริ่มต้นด้วยรุ่น Q",
+  "qr_code_format_note": "รูปแบบรหัส QR ที่แตกต่างกันถูกใช้โดยกระเป๋าเงินฮาร์ดแวร์ที่แตกต่างกันในพื้นที่ Bitcoin",
   "qr_fullscreen": "แตะเพื่อเปิดหน้าจอ QR code แบบเต็มจอ",
   "qr_instruction": "ใช้ที่อยู่นี้เพื่อรับโทเค็นหรือของสะสม",
   "qr_payment_amount": "QR code นี้มีจำนวนการชำระเงิน คุณต้องการเขียนทับค่าปัจจุบันหรือไม่?",
