--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Cüzdan türevini seçin",
   "choose_from_available_options": "Mevcut seçenekler arasından seçim yap:",
   "choose_one": "Birini seç",
+  "choose_qr_code_format": "QR Kod Biçimi Seçin",
+  "choose_qr_code_format_note": "Donanım cüzdanınız için doğru biçimi seçin:",
   "choose_relay": "Lütfen kullanmak için bir röle seçin",
   "choose_wallet_currency": "Lütfen cüzdanın para birimini seç:",
   "choose_wallet_group": "Cüzdan Grubu Seçin",
@@ -642,6 +644,9 @@
   "public_key": "Genel Anahtar",
   "purchase_gift_card": "Hediye Kartı Satın Al",
   "purple_dark_theme": "Mor karanlık tema",
+  "qr_code_format": "QR Kod Biçimi",
+  "qr_code_format_body": "BCUR (Blockchain Commons üniforma kaynakları) endüstri standardıdır ve en çok Bitcoin donanım cüzdanları ile uyumludur ve çoğu kullanıcı tarafından seçilmelidir. BBQR (Better Bitcoin QR), Model Q ile başlayarak yalnızca ColdCard donanım cüzdanları tarafından kullanılan benzersiz bir formattır.",
+  "qr_code_format_note": "Bitcoin alanındaki farklı donanım cüzdanları tarafından farklı QR kod formatları kullanılır",
   "qr_fullscreen": "QR kodunu tam ekranda açmak için dokun",
   "qr_instruction": "Herhangi bir jeton veya koleksiyon almak için bu adresi kullanın",
   "qr_payment_amount": "Bu QR kodu ödeme tutarını içeriyor. Geçerli miktarın üzerine yazmak istediğine emin misin?",
