--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Виберіть деривацію гаманця",
   "choose_from_available_options": "Виберіть із доступних варіантів:",
   "choose_one": "Вибери один",
+  "choose_qr_code_format": "Виберіть формат QR -коду",
+  "choose_qr_code_format_note": "Виберіть правильний формат для свого апаратного гаманця:",
   "choose_relay": "Будь ласка, виберіть реле для використання",
   "choose_wallet_currency": "Будь ласка, виберіть валюту гаманця:",
   "choose_wallet_group": "Виберіть групу гаманця",
@@ -642,6 +644,9 @@
   "public_key": "Публічний ключ",
   "purchase_gift_card": "Придбати подарункову картку",
   "purple_dark_theme": "Фіолетова темна тема",
+  "qr_code_format": "Формат QR -коду",
+  "qr_code_format_body": "BCUR (Blockchain Commons Unifical Resources) - це галузевий стандарт і найбільш сумісний з апаратними гаманцями Bitcoin, і його повинні вибрати більшість користувачів. BBQR (кращий біткойн QR) - це унікальний формат, який використовується лише апаратними гаманцями Coldcard, починаючи з їх моделі Q.",
+  "qr_code_format_note": "Різні формати QR -коду використовуються різними апаратними гаманцями в просторі Bitcoin",
   "qr_fullscreen": "Торкніться, щоб відкрити QR-код на весь екран",
   "qr_instruction": "Використовуйте цю адресу, щоб отримати будь -який маркер або колекціонування",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
