--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -155,6 +155,8 @@
   "choose_derivation": "Chọn Đường dẫn Ví",
   "choose_from_available_options": "Chọn từ các tùy chọn có sẵn:",
   "choose_one": "Chọn một",
+  "choose_qr_code_format": "Chọn định dạng mã QR",
+  "choose_qr_code_format_note": "Chọn đúng định dạng cho ví phần cứng của bạn:",
   "choose_relay": "Vui lòng chọn một relay để sử dụng",
   "choose_wallet_currency": "Vui lòng chọn tiền tệ của ví:",
   "choose_wallet_group": "Chọn nhóm ví",
@@ -640,6 +642,9 @@
   "public_key": "Khóa công khai",
   "purchase_gift_card": "Mua thẻ quà tặng",
   "purple_dark_theme": "Chủ đề tối tím",
+  "qr_code_format": "Định dạng mã QR",
+  "qr_code_format_body": "BCUR (Tài nguyên thống nhất Blockchain Commons) là tiêu chuẩn công nghiệp và tương thích rộng rãi nhất với ví phần cứng bitcoin và nên được hầu hết người dùng chọn. BBQR (Bitcoin QR tốt hơn) là một định dạng duy nhất chỉ được sử dụng bởi ví phần cứng Coldcard, bắt đầu với mô hình của họ Q.",
+  "qr_code_format_note": "Các định dạng mã QR khác nhau được sử dụng bởi các ví phần cứng khác nhau trong không gian bitcoin",
   "qr_fullscreen": "Nhấn để mở mã QR toàn màn hình",
   "qr_instruction": "Sử dụng địa chỉ này để nhận bất kỳ mã thông báo hoặc bộ sưu tập nào trên",
   "qr_payment_amount": "Mã QR này chứa số tiền thanh toán. Bạn có muốn ghi đè giá trị hiện tại không?",
