--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "选择钱包推导",
   "choose_from_available_options": "从可用选项中选择：",
   "choose_one": "选一个",
+  "choose_qr_code_format": "选择QR码格式",
+  "choose_qr_code_format_note": "为您的硬件钱包选择正确的格式：",
   "choose_relay": "请选择要使用的继电器",
   "choose_wallet_currency": "请选择钱包货币：",
   "choose_wallet_group": "选择钱包组",
@@ -642,6 +644,9 @@
   "public_key": "公钥",
   "purchase_gift_card": "购买礼品卡",
   "purple_dark_theme": "紫色的黑暗主题",
+  "qr_code_format": "QR码格式",
+  "qr_code_format_body": "BCUR（区块链共同资源）是行业标准，与比特币硬件钱包最广泛兼容，大多数用户应选择。 BBQR（Better Bitcoin QR）是一种仅由ColdCard Hardware Challets使用的唯一格式，从他们的型号开始。",
+  "qr_code_format_note": "不同的硬件钱包在比特币空间中使用了不同的QR码格式",
   "qr_fullscreen": "点击打开全屏二维码",
   "qr_instruction": "使用此地址接收任何令牌或收藏",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
