--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Wählen Sie Wallet-Ableitung",
   "choose_from_available_options": "Wähle aus verfügbaren Optionen:",
   "choose_one": "Wähle ein",
+  "choose_qr_code_format": "Wählen Sie das QR -Code -Format",
+  "choose_qr_code_format_note": "Wählen Sie das richtige Format für Ihre Hardware -Brieftasche:",
   "choose_relay": "Bitte wählen Sie ein zu verwendendes Relais aus",
   "choose_wallet_currency": "Bitte wählen Sie die Währung der Wallet:",
   "choose_wallet_group": "Wählen Sie Walletgruppe",
@@ -643,6 +645,9 @@
   "public_key": "Öffentlicher Schlüssel",
   "purchase_gift_card": "Geschenkkarte kaufen",
   "purple_dark_theme": "Lila dunkle Thema",
+  "qr_code_format": "QR -Codeformat",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) ist der Branchenstandard und am weitesten verbreitet mit Bitcoin -Hardware -Geldbörsen und sollte von den meisten Benutzern ausgewählt werden. BBQR (Better Bitcoin QR) ist ein einzigartiges Format, das nur von Coldcard -Hardware -Geldbörsen verwendet wird, beginnend mit ihrem Modell Q.",
+  "qr_code_format_note": "Unterschiedliche QR -Codeformate werden von verschiedenen Hardware -Geldbörsen im Bitcoin -Bereich verwendet",
   "qr_fullscreen": "Tippen Sie hier, um den QR-Code im Vollbildmodus zu öffnen",
   "qr_instruction": "Verwenden Sie diese Adresse, um ein Token oder ein Sammlerstück zu erhalten",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
