--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Choose Wallet Derivation",
   "choose_from_available_options": "Choose from the available options:",
   "choose_one": "Choose one",
+  "choose_qr_code_format": "Choose QR Code Format",
+  "choose_qr_code_format_note": "Choose the right format for your hardware wallet:",
   "choose_relay": "Please choose a relay to use",
   "choose_wallet_currency": "Please choose wallet currency:",
   "choose_wallet_group": "Choose Wallet Group",
@@ -643,6 +645,9 @@
   "public_key": "Public key",
   "purchase_gift_card": "Purchase Gift Card",
   "purple_dark_theme": "Purple Dark Theme",
+  "qr_code_format": "QR Code Format",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) is the industry standard, and most widely compatible with Bitcoin hardware wallets, and should be selected by most users. BBQR (Better Bitcoin QR) is a unique format used only by COLDCARD hardware wallets, starting with their model Q.",
+  "qr_code_format_note": "Different QR code formats are used by different hardware wallets in the Bitcoin space",
   "qr_fullscreen": "Tap to open full screen QR code",
   "qr_instruction": "Use this address to receive any token or collectible on",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
