--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Odaberite izvedbu novčanika",
   "choose_from_available_options": "Odaberite neku od dostupnih opcija:",
   "choose_one": "Izaberi jedan",
+  "choose_qr_code_format": "Odaberite format QR koda",
+  "choose_qr_code_format_note": "Odaberite pravi format za svoj hardverski novčanik:",
   "choose_relay": "Odaberite relej za korištenje",
   "choose_wallet_currency": "Molimo odaberite valutu novčanika:",
   "choose_wallet_group": "Odaberite grupu novčanika",
@@ -642,6 +644,9 @@
   "public_key": "Javni ključ",
   "purchase_gift_card": "Kupnja darovne kartice",
   "purple_dark_theme": "Ljubičasta tamna tema",
+  "qr_code_format": "QR format koda",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) je industrijski standard, a najčešće kompatibilni s Bitcoin hardverskim novčanicama, a trebala bi ga odabrati većina korisnika. BBQR (Better Bitcoin QR) jedinstven je format koji koriste samo Coldcard Hardware novčanici, počevši od njihovog modela Q.",
+  "qr_code_format_note": "Različite formate QR koda koriste različiti hardverski novčanici u prostoru Bitcoin",
   "qr_fullscreen": "Dodirnite za otvaranje QR koda preko cijelog zaslona",
   "qr_instruction": "Upotrijebite ovu adresu da biste dobili bilo koji token ili kolekcionar na",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
