--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "ウォレット派生を選択します",
   "choose_from_available_options": "利用可能なオプションから選択してください:",
   "choose_one": "1 つ選択してください",
+  "choose_qr_code_format": "QRコード形式を選択します",
+  "choose_qr_code_format_note": "ハードウェアウォレットに適した形式を選択してください。",
   "choose_relay": "使用するリレーを選択してください",
   "choose_wallet_currency": "ウォレット通貨を選択してください：",
   "choose_wallet_group": "ウォレットグループを選択してください",
@@ -643,6 +645,9 @@
   "public_key": "公開鍵",
   "purchase_gift_card": "ギフトカードを購入",
   "purple_dark_theme": "紫色の暗いテーマ",
+  "qr_code_format": "QRコード形式",
+  "qr_code_format_body": "BCUR（Blockchain Commons Uniform Resources）は業界標準であり、ビットコインハードウェアウォレットと最も広く互換性があり、ほとんどのユーザーが選択する必要があります。 BBQR（Better Bitcoin QR）は、モデルQから始まるColdCardハードウェアウォレットのみが使用する一意の形式です。",
+  "qr_code_format_note": "さまざまなQRコード形式がビットコインスペースの異なるハードウェアウォレットで使用されます",
   "qr_fullscreen": "タップして全画面QRコードを開く",
   "qr_instruction": "このアドレスを使用して、トークンまたはコレクタブルを受け取ります",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
