--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "پرس سے ماخوذ منتخب کریں",
   "choose_from_available_options": "دستیاب اختیارات میں سے انتخاب کریں:",
   "choose_one": "ایک کا انتخاب کریں",
+  "choose_qr_code_format": "QR کوڈ فارمیٹ کا انتخاب کریں",
+  "choose_qr_code_format_note": "اپنے ہارڈ ویئر پرس کے لئے صحیح شکل کا انتخاب کریں:",
   "choose_relay": "۔ﮟﯾﺮﮐ ﺏﺎﺨﺘﻧﺍ ﺎﮐ ﮯﻠﯾﺭ ﮯﯿﻟ ﮯﮐ ﮯﻧﺮﮐ ﻝﺎﻤﻌﺘﺳﺍ ﻡﺮﮐ ﮦﺍﺮﺑ",
   "choose_wallet_currency": "براہ کرم والیٹ کرنسی کا انتخاب کریں:",
   "choose_wallet_group": "پرس گروپ کا انتخاب کریں",
@@ -644,6 +646,9 @@
   "public_key": "عوامی کلید",
   "purchase_gift_card": "گفٹ کارڈ خریدیں۔",
   "purple_dark_theme": "ارغوانی ڈارک تھیم",
+  "qr_code_format": "QR کوڈ فارمیٹ",
+  "qr_code_format_body": "بی سی او آر (بلاکچین کامنز یکساں وسائل) صنعت کا معیار ہے ، اور بٹ کوائن ہارڈ ویئر بٹوے کے ساتھ سب سے زیادہ وسیع پیمانے پر مطابقت رکھتا ہے ، اور زیادہ تر صارفین کو منتخب کرنا چاہئے۔ بی بی کیو آر (بیٹر بٹ کوائن کیو آر) ایک انوکھا فارمیٹ ہے جو صرف کولڈ کارڈ ہارڈ ویئر بٹوے کے ذریعہ استعمال ہوتا ہے ، جس کا آغاز ان کے ماڈل کیو سے ہوتا ہے۔",
+  "qr_code_format_note": "مختلف کیو آر کوڈ فارمیٹس بٹ کوائن کی جگہ میں مختلف ہارڈ ویئر بٹوے کے ذریعہ استعمال ہوتے ہیں",
   "qr_fullscreen": "فل سکرین QR کوڈ کھولنے کے لیے تھپتھپائیں۔",
   "qr_instruction": "اس پتے کو کسی بھی ٹوکن یا اجتماعی وصول کرنے کے لئے استعمال کریں",
   "qr_payment_amount": "اس QR کوڈ میں ادائیگی کی رقم شامل ہے۔ کیا آپ موجودہ قدر کو اوور رائٹ کرنا چاہتے ہیں؟",
