--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -157,6 +157,8 @@
   "choose_derivation": "Yan awọn apamọwọ apamọwọ",
   "choose_from_available_options": "Ẹ yàn láti àwọn ìyàn yìí:",
   "choose_one": "Ẹ yàn kan",
+  "choose_qr_code_format": "Yan ọna kika koodu QR",
+  "choose_qr_code_format_note": "Yan ọna ọtun fun apamọwọ ohun elo rẹ:",
   "choose_relay": "Jọwọ yan yii lati lo",
   "choose_wallet_currency": "Ẹ jọ̀wọ́, yàn irú owó ti àpamọ́wọ́ yín:",
   "choose_wallet_group": "Yan ẹgbẹ ogiri",
@@ -643,6 +645,9 @@
   "public_key": "Kọ́kọ́rọ́ tó kò àdáni",
   "purchase_gift_card": "Ra káàdì ìrajà t'á lò nínú irú kan ìtajà",
   "purple_dark_theme": "Akọle dudu dudu",
+  "qr_code_format": "Ọna kika QR",
+  "qr_code_format_body": "BCUR (Blockchain Condons Awọn orisun ile-iṣẹ) Njẹ boṣewa ile-iṣẹ) ati ibaramu julọ pẹlu awọn Woleti Bluecoin, ati pe o yẹ ki o yan nipasẹ ọpọlọpọ awọn olumulo. BBQR (VBCOIN VRR) jẹ ọna alailẹgbẹ ti a lo nipasẹ awọn Woleti Hardware ni otutu nikan, bẹrẹ pẹlu awoṣe wọn Q.",
+  "qr_code_format_note": "Awọn ọna kika koodu qr yatọ nipasẹ awọn ogiri ina oriṣiriṣi oriṣiriṣi ni aaye Bitcoin",
   "qr_fullscreen": "Àmì ìlujá túbọ̀ máa tóbi tí o bá tẹ̀",
   "qr_instruction": "Lo adirẹsi yii lati gba eyikeyi ami-ọmọ tabi gbigba lori",
   "qr_payment_amount": "Iye owó t'á ránṣé wà nínú àmì ìlujá yìí. Ṣé ẹ fẹ́ pààrọ̀ ẹ̀?",
