--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -168,6 +168,7 @@
   "collection_description": "وصف المجموعة",
   "collection_name": "اسم المجموعة",
   "color_theme": "سمة اللون",
+  "coming_soon_tag": "قريباً",
   "commit_transaction_amount_fee": "تنفيذ الصفقة\nالمبلغ: ${amount}\nالرسوم: ${fee}",
   "confirm": "تأكيد",
   "confirm_delete_template": "سيؤدي هذا الإجراء إلى حذف هذا القالب. هل ترغب في الاستمرار؟",
