--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -168,6 +168,7 @@
   "collection_description": "Описание на колекцията",
   "collection_name": "Име на колекцията",
   "color_theme": "Цвят",
+  "coming_soon_tag": "Очаквайте скоро",
   "commit_transaction_amount_fee": "Изпълняване на транзакция\nСума: ${amount}\nТакса: ${fee}",
   "confirm": "Потвърждаване",
   "confirm_delete_template": "Този шаблон ще бъде изтрит. Искате ли да продължите?",
