--- a/res/values/strings_cs.arb
+++ b/res/values/strings_cs.arb
@@ -168,6 +168,7 @@
   "collection_description": "Popis sbírky",
   "collection_name": "Název sbírky",
   "color_theme": "Barevný motiv",
+  "coming_soon_tag": "Přijde brzy",
   "commit_transaction_amount_fee": "Odeslat transakci\nČástka: ${amount}\nPoplatek: ${fee}",
   "confirm": "Potvrdit",
   "confirm_delete_template": "Tato akce smaže tuto šablonu. Přejete si pokračovat?",
