--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -168,6 +168,7 @@
   "collection_description": "Sammlung Beschreibung",
   "collection_name": "Sammlungsname",
   "color_theme": "Farbthema",
+  "coming_soon_tag": "Kommt bald",
   "commit_transaction_amount_fee": "Transaktion absenden\nBetrag: ${amount}\nGebühr: ${fee}",
   "confirm": "Bestätigen",
   "confirm_delete_template": "Diese Aktion löscht diese Vorlage. Möchten Sie fortfahren?",
