--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -168,6 +168,7 @@
   "collection_description": "संग्रह विवरण",
   "collection_name": "संग्रह नाम",
   "color_theme": "रंग विषय",
+  "coming_soon_tag": "जल्द आ रहा है",
   "commit_transaction_amount_fee": "लेन-देन करें\nरकम: ${amount}\nशुल्क: ${fee}",
   "confirm": "की पुष्टि करें",
   "confirm_delete_template": "यह क्रिया इस टेम्पलेट को हटा देगी। क्या आप जारी रखना चाहते हैं?",
