--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -168,6 +168,7 @@
   "collection_description": "Zbirka Opis opisa",
   "collection_name": "Naziv kolekcije",
   "color_theme": "Shema boja",
+  "coming_soon_tag": "Dolazi uskoro",
   "commit_transaction_amount_fee": "Izvrši transakciju \nAmount: ${amount}\nFee: ${fee}",
   "confirm": "Potvrdi",
   "confirm_delete_template": "Ovom ćete radnjom izbrisati ovaj predložak. Želite li nastaviti?",
