--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -168,6 +168,7 @@
   "collection_description": "Deskripsi Koleksi",
   "collection_name": "Nama Koleksi",
   "color_theme": "Tema warna",
+  "coming_soon_tag": "Segera hadir",
   "commit_transaction_amount_fee": "Lakukan transaksi\nJumlah: ${amount}\nBiaya: ${fee}",
   "confirm": "Konfirmasi",
   "confirm_delete_template": "Tindakan ini akan menghapus template ini. Apakah Anda ingin melanjutkan?",
