--- a/res/values/strings_it.arb
+++ b/res/values/strings_it.arb
@@ -168,6 +168,7 @@
   "collection_description": "Descrizione della raccolta",
   "collection_name": "Nome della raccolta",
   "color_theme": "Colore tema",
+  "coming_soon_tag": "Prossimamente",
   "commit_transaction_amount_fee": "Invia transazione\nAmmontare: ${amount}\nCommissione: ${fee}",
   "confirm": "Conferma",
   "confirm_delete_template": "Questa azione cancellerà questo modello. Desideri continuare?",
