--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -168,6 +168,7 @@
   "collection_description": "コレクションの説明",
   "collection_name": "コレクション名",
   "color_theme": "カラーテーマ",
+  "coming_soon_tag": "近日公開",
   "commit_transaction_amount_fee": "トランザクションをコミット\n量: ${amount}\n費用: ${fee}",
   "confirm": "確認する",
   "confirm_delete_template": "この操作により、このテンプレートが削除されます。 続行しますか？",
