--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -168,6 +168,7 @@
   "collection_description": "Verzamelingsbeschrijving",
   "collection_name": "Verzamelnaam",
   "color_theme": "Kleur thema",
+  "coming_soon_tag": "Binnenkort",
   "commit_transaction_amount_fee": "Verricht transactie\nBedrag: ${amount}\nhonorarium: ${fee}",
   "confirm": "Bevestigen",
   "confirm_delete_template": "Met deze actie wordt deze sjabloon verwijderd. Wilt u doorgaan?",
