--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -168,6 +168,7 @@
   "collection_description": "Opis kolekcji",
   "collection_name": "Nazwa kolekcji",
   "color_theme": "Motyw kolorystyczny",
+  "coming_soon_tag": "Już wkrótce",
   "commit_transaction_amount_fee": "Zatwierdź transakcję\nIlość: ${amount}\nOpłata: ${fee}",
   "confirm": "Potwierdź",
   "confirm_delete_template": "Ta czynność usunie ten szablon. Czy chcesz kontynuować?",
