--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -168,6 +168,7 @@
   "collection_description": "Koleksiyon Açıklama",
   "collection_name": "Toplama adı",
   "color_theme": "Renk teması",
+  "coming_soon_tag": "Yakında gelecek",
   "commit_transaction_amount_fee": "Transferi gerçekleştir\nMiktar: ${amount}\nKomisyon: ${fee}",
   "confirm": "Onayla",
   "confirm_delete_template": "Bu eylem, bu şablonu silecek. Devam etmek istiyor musun?",
