--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -168,6 +168,7 @@
   "collection_description": "Ijuwe akopọ",
   "collection_name": "Orukọ ikojọpọ",
   "color_theme": "Àwọn ààtò àwọ̀",
+  "coming_soon_tag": "Nbọ laipẹ",
   "commit_transaction_amount_fee": "Jẹ́rìí sí àránṣẹ́\nOwó: ${amount}\nIye àfikún: ${fee}",
   "confirm": "Jẹ́rìísí",
   "confirm_delete_template": "Ìṣe yìí máa yọ àwòṣe yìí kúrò. Ṣé ẹ fẹ́ tẹ̀síwájú?",
