feat: redesign hardware wallet restoration flow with improved routing, UI updates, and manufacturer-specific device selection handling

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "حدد مزود شراء أعلاه. يمكنك تخطي هذه الشاشة عن طريق تعيين مزود شراء الافتراضي في إعدادات التطبيق.",
   "select_destination": ".ﻲﻃﺎﻴﺘﺣﻻ﻿ﺍ ﺦﺴﻨﻟﺍ ﻒﻠﻣ ﺔﻬﺟﻭ ﺪﻳﺪﺤﺗ ءﺎﺟﺮﻟﺍ",
   "select_hw_account_below": "الرجاء تحديد حساب الاستعادة أدناه:",
+  "select_manufacturer_title": "حدد الشركة المصنعة",
   "select_sell_provider_notice": ".ﻖﻴﺒﻄﺘﻟﺍ ﺕﺍﺩﺍﺪﻋﺇ ﻲﻓ ﻚﺑ ﺹﺎﺨﻟﺍ ﻲﺿﺍﺮﺘﻓﻻ﻿ﺍ ﻊﻴﺒﻟﺍ ﺩﻭﺰﻣ ﻦﻴﻴﻌﺗ ﻖﻳﺮﻃ ﻦﻋ ﺔﺷﺎﺸﻟﺍ ﻩﺬﻫ ﻲﻄﺨﺗ",
   "select_your_country": "الرجاء تحديد بلدك",
   "selected_trocador_provider": "مزود تروكادور المختار",
