--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -600,8 +600,8 @@
   "payjoin_unavailable_sheet_title": "Payjoin अनुपलब्ध क्यों है?",
   "payment_id": "भुगतान ID: ",
   "payment_made_easy": "भुगतान आसान किया गया",
-  "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
   "Payment_was_received": "आपका भुगतान प्राप्त हो गया था।",
+  "payment_was_received": "आपका भुगतान प्राप्त हुआ था।",
   "payments": "भुगतान",
   "pending": " (अपूर्ण)",
   "percentageOf": "${amount} का",
@@ -777,6 +777,7 @@
   "select_buy_provider_notice": "ऊपर एक खरीद प्रदाता का चयन करें। आप इस स्क्रीन को ऐप सेटिंग्स में अपना डिफ़ॉल्ट बाय प्रदाता सेट करके छोड़ सकते हैं।",
   "select_destination": "कृपया बैकअप फ़ाइल के लिए गंतव्य का चयन करें।",
   "select_hw_account_below": "कृपया नीचे पुनर्स्थापित करने के लिए कौन सा खाता चुनें:",
+  "select_manufacturer_title": "निर्माता का चयन करें",
   "select_sell_provider_notice": "ऊपर एक विक्रय प्रदाता का चयन करें। आप ऐप सेटिंग में अपना डिफ़ॉल्ट विक्रय प्रदाता सेट करके इस स्क्रीन को छोड़ सकते हैं।",
   "select_your_country": "कृपया अपने देश का चयन करें",
   "selected_trocador_provider": "चयनित ट्रोकैडर प्रदाता",
