--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "Selecteer hierboven een koopprovider. U kunt dit scherm overslaan door uw standaard kopenprovider in te stellen in app -instellingen.",
   "select_destination": "Selecteer de bestemming voor het back-upbestand.",
   "select_hw_account_below": "Selecteer welk account u hieronder moet herstellen:",
+  "select_manufacturer_title": "Selecteer fabrikant",
   "select_sell_provider_notice": "Selecteer hierboven een verkoopaanbieder. U kunt dit scherm overslaan door uw standaardverkoopprovider in te stellen in de app-instellingen.",
   "select_your_country": "Selecteer uw land",
   "selected_trocador_provider": "Geselecteerde Trocador -provider",
