--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -776,6 +776,7 @@
   "select_buy_provider_notice": "Виберіть постачальника купівлі вище. Ви можете пропустити цей екран, встановивши свого постачальника купівлі за замовчуванням у налаштуваннях додатків.",
   "select_destination": "Виберіть місце призначення для файлу резервної копії.",
   "select_hw_account_below": "Виберіть, який рахунок відновити нижче:",
+  "select_manufacturer_title": "Виберіть виробника",
   "select_sell_provider_notice": "Виберіть вище постачальника послуг продажу. Ви можете пропустити цей екран, встановивши постачальника послуг продажу за умовчанням у налаштуваннях програми.",
   "select_your_country": "Будь ласка, виберіть свою країну",
   "selected_trocador_provider": "Вибраний постачальник Trocador",
