--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -776,6 +776,7 @@
   "select_buy_provider_notice": "Yan olupese Ra loke. O le skii iboju yii nipa ṣiṣeto olupese rẹ ni awọn eto App.",
   "select_destination": "Jọwọ yan ibi ti o nlo fun faili afẹyinti.",
   "select_hw_account_below": "Jọwọ yan iru iroyin lati mu pada ni isalẹ:",
+  "select_manufacturer_title": "Yan olupese",
   "select_sell_provider_notice": "Yan olupese ti o ta loke. O le foju iboju yii nipa tito olupese iṣẹ tita aiyipada rẹ ni awọn eto app.",
   "select_your_country": "Jọwọ yan orilẹ-ede rẹ",
   "selected_trocador_provider": "olupese trocador ti a yan",
