--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "Изберете доставчик на покупка по -горе. Можете да пропуснете този екран, като зададете вашия доставчик по подразбиране по подразбиране в настройките на приложението.",
   "select_destination": "Моля, изберете дестинация за архивния файл.",
   "select_hw_account_below": "Моля, изберете кой акаунт да възстановите по -долу:",
+  "select_manufacturer_title": "Изберете производител",
   "select_sell_provider_notice": "Изберете доставчик на продажба по-горе. Можете да пропуснете този екран, като зададете своя доставчик на продажба по подразбиране в настройките на приложението.",
   "select_your_country": "Моля, изберете вашата страна",
   "selected_trocador_provider": "Избран доставчик на трокадор",
