--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -776,6 +776,7 @@
   "select_buy_provider_notice": "Selecciona un proveedor de compra arriba. Puede omitir esta pantalla configurando su proveedor de compra predeterminado en la configuración de la aplicación.",
   "select_destination": "Selecciona el destino del archivo de copia de seguridad.",
   "select_hw_account_below": "Seleccione qué cuenta restaurar a continuación:",
+  "select_manufacturer_title": "Seleccionar fabricante",
   "select_sell_provider_notice": "Selecciona un proveedor de venta arriba. Puede omitir esta pantalla configurando su proveedor de venta predeterminado en la configuración de la aplicación.",
   "select_your_country": "Seleccione su país",
   "selected_trocador_provider": "Proveedor de Trocador seleccionado",
