--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "Sélectionnez un fournisseur d'achat ci-dessus. Vous pouvez ignorer cet écran en définissant votre fournisseur d'achat par défaut dans les paramètres de l'application.",
   "select_destination": "Veuillez sélectionner la destination du fichier de sauvegarde.",
   "select_hw_account_below": "Veuillez sélectionner le compte à restaurer ci-dessous:",
+  "select_manufacturer_title": "Sélectionner le fabricant",
   "select_sell_provider_notice": "Sélectionnez un fournisseur de vente ci-dessus. Vous pouvez ignorer cet écran en définissant votre fournisseur de vente par défaut dans les paramètres de l'application.",
   "select_your_country": "Veuillez sélectionner votre pays",
   "selected_trocador_provider": "fournisseur de trocador sélectionné",
