--- a/res/values/strings_ko.arb
+++ b/res/values/strings_ko.arb
@@ -776,6 +776,7 @@
   "select_buy_provider_notice": "위에서 구매 제공 업체를 선택하세요. 앱 설정에서 기본 구매 제공 업체를 설정하여 이 화면을 건너뛸 수 있습니다.",
   "select_destination": "백업 파일의 대상을 선택하세요.",
   "select_hw_account_below": "아래에서 복구할 계정을 선택하세요:",
+  "select_manufacturer_title": "제조업체를 선택하십시오",
   "select_sell_provider_notice": "위에서 판매 제공 업체를 선택하세요. 앱 설정에서 기본 판매 제공 업체를 설정하여 이 화면을 건너뛸 수 있습니다.",
   "select_your_country": "국가를 선택하세요",
   "selected_trocador_provider": "선택된 Trocador 제공 업체",
