--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "Wybierz powyższe dostawcę zakupu. Możesz pominąć ten ekran, ustawiając domyślnego dostawcę zakupu w ustawieniach aplikacji.",
   "select_destination": "Wybierz miejsce docelowe dla pliku kopii zapasowej.",
   "select_hw_account_below": "Wybierz, które konto przywrócić poniżej:",
+  "select_manufacturer_title": "Wybierz producent",
   "select_sell_provider_notice": "Wybierz dostawcę sprzedaży powyżej. Możesz pominąć ten ekran, ustawiając domyślnego dostawcę sprzedaży w ustawieniach aplikacji.",
   "select_your_country": "Wybierz swój kraj",
   "selected_trocador_provider": "Wybrany dostawca Trocador",
