--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -777,6 +777,7 @@
   "select_buy_provider_notice": "Selecione um provedor de compra acima. Você pode pular esta tela definindo seu provedor de compra padrão nas configurações de aplicativos.",
   "select_destination": "Selecione o destino para o arquivo de backup.",
   "select_hw_account_below": "Selecione qual conta para restaurar abaixo:",
+  "select_manufacturer_title": "Selecione o fabricante",
   "select_sell_provider_notice": "Selecione um fornecedor de venda acima. Você pode pular esta tela definindo seu provedor de venda padrão nas configurações do aplicativo.",
   "select_your_country": "Selecione seu país",
   "selected_trocador_provider": "Provedor de Trocador selecionado",
