--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "เลือกผู้ให้บริการซื้อด้านบน คุณสามารถข้ามหน้าจอนี้ได้โดยการตั้งค่าผู้ให้บริการซื้อเริ่มต้นในการตั้งค่าแอป",
   "select_destination": "โปรดเลือกปลายทางสำหรับไฟล์สำรอง",
   "select_hw_account_below": "กรุณาเลือกบัญชีที่จะกู้คืนด้านล่าง:",
+  "select_manufacturer_title": "เลือกผู้ผลิต",
   "select_sell_provider_notice": "เลือกผู้ให้บริการการขายด้านบน คุณสามารถข้ามหน้าจอนี้ได้โดยการตั้งค่าผู้ให้บริการการขายเริ่มต้นในการตั้งค่าแอป",
   "select_your_country": "กรุณาเลือกประเทศของคุณ",
   "selected_trocador_provider": "ผู้ให้บริการ Trocador ที่เลือก",
