--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -775,6 +775,7 @@
   "select_buy_provider_notice": "Yukarıda bir satın alma sağlayıcısı seçin. App ayarlarında varsayılan satın alma sağlayıcınızı ayarlayarak bu ekranı atlayabilirsiniz.",
   "select_destination": "Lütfen yedekleme dosyası için hedef seçin.",
   "select_hw_account_below": "Lütfen aşağıda hangi hesabı geri yükleyeceğinizi seçin:",
+  "select_manufacturer_title": "Üretici seçin",
   "select_sell_provider_notice": "Yukarıdan bir satış sağlayıcısı seçin. Uygulama ayarlarında varsayılan satış sağlayıcınızı ayarlayarak bu ekranı atlayabilirsiniz.",
   "select_your_country": "Lütfen ülkenizi seçin",
   "selected_trocador_provider": "Seçilmiş Trocador Sağlayıcı",
